Add all HTML content.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,21 @@
   <p>Work</p>
   <p>Team</p>
   <p>Contact</p>
+  <p>Our Process</p>
+  <p>Identify</p>
+  <p>We focus on the most important details.</p>
+  <p>Understand</p>
+  <p>We study out projects inside and out.</p>
+  <p>Execute</p>
+  <p>We put everything we have into our work</p>
+  <p>Designed in New York</p>
+  <p>Portfolio</p>
+  <p>Coming soon</p>
+  <p>Team</p>
+  <p>We're hiring</p>
+  <p>Contact</p>
+  <p>Phone: (555)-555-5555</p>
+  <p>E-mail: test@example.com</p>
+  <p>Twitter: @test</p>
 </body>
 </html>
