Add HTML and CSS for header.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Broadway design</title>
+  <link href="resources/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <h1>Broadway Design</h1>
-  <p>Home</p>
-  <p>Process</p>
-  <p>Work</p>
-  <p>Team</p>
-  <p>Contact</p>
+  <div class="header">
+    <h1>Broadway Design</h1>
+    <nav>
+      <p>Home</p>
+      <p>Process</p>
+      <p>Work</p>
+      <p>Team</p>
+      <p>Contact</p>
+    </nav>
+  </div>
   <p>Our Process</p>
   <p>Identify</p>
   <p>We focus on the most important details.</p>
