--- a/index.html
+++ b/index.html
@@ -15,18 +15,21 @@
       <p>Contact</p>
     </nav>
   </div>
-  <p>Our Process</p>
-  <p>Identify</p>
+  <h2>Our Process</h2>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
+  <h3>Identify</h3>
   <p>We focus on the most important details.</p>
-  <p>Understand</p>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
+  <h3>Understand</h3>
   <p>We study out projects inside and out.</p>
-  <p>Execute</p>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
+  <h3>Execute</h3>
   <p>We put everything we have into our work</p>
-  <p>Designed in New York</p>
-  <p>Portfolio</p>
+  <h3 class="origin">Designed in New York</h3>
+  <h3>Portfolio</h3>
   <p>Coming soon</p>
-  <p>Team</p>
-  <p>We're hiring</p>
+  <h3>Team</p>
+  <p>We're hiring</h3>
   <p>Contact</p>
   <p>Phone: (555)-555-5555</p>
   <p>E-mail: test@example.com</p>
