--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   <div class="header">
+    <!--header-->
     <h1>Broadway Design</h1>
+    <!---navigation--------->
     <nav>
       <p>Home</p>
       <p>Process</p>
@@ -15,24 +17,30 @@
       <p>Contact</p>
     </nav>
   </div>
-  <h2>Our Process</h2>
-  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
-  <h3>Identify</h3>
-  <p>We focus on the most important details.</p>
-  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
-  <h3>Understand</h3>
-  <p>We study out projects inside and out.</p>
-  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
-  <h3>Execute</h3>
-  <p>We put everything we have into our work</p>
+  <!--body and about me section-->
+  <div class="process">
+    <h2>Our Process</h2>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
+    <h3>Identify</h3>
+    <p>We focus on the most important details.</p>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
+    <h3>Understand</h3>
+    <p>We study out projects inside and out.</p>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
+    <h3>Execute</h3>
+    <p>We put everything we have into our work</p>
+  </div>
   <h3 class="origin">Designed in New York</h3>
-  <h3>Portfolio</h3>
+  <h3 class="work">Portfolio</h3>
   <p>Coming soon</p>
-  <h3>Team</p>
-  <p>We're hiring</h3>
-  <p>Contact</p>
+  <h3 class="team">Team</h3>
+  <p>We're hiring</p>
+  <!--Contact information-->
+  <h3 class="contact">Contact</h3>
   <p>Phone: (555)-555-5555</p>
   <p>E-mail: test@example.com</p>
   <p>Twitter: @test</p>
+  <!--footer-->
+  <p class="foot"> &copy; Broadway 2016 <span>Home</span>&nbsp;<span>About</span>&nbsp;<span>Work</span>&nbsp;<span>Team</span>&nbsp;<span>Contact</span></p>
 </body>
 </html>
