Add final touches.

--- a/index.html
+++ b/index.html
@@ -34,19 +34,21 @@
   <h3 id="Work">Portfolio</h3>
   <p>Coming soon</p>
   <h3 id="Team">Team</h3>
-  <p>We're hiring</p>
+  <p>We're hiring!</p>
   <!--Contact information-->
   <h3 id="Contact">Contact</h3>
   <p>Phone: (555)-555-5555</p>
   <p>E-mail: test@example.com</p>
   <p>Twitter: @test</p>
   <!--footer-->
-  <p class="foot"> &copy; Broadway 2016
-    <a href="#Home">Home</a>&nbsp;
-    <a href="#About">About</a>&nbsp;
-    <a href="#Work">Work</a>&nbsp;
-    <a href="#Team">Team</a>&nbsp;
-    <a href="#Contact">Contact</a>
-  </p>
+  <div class="footer">
+    <p> &copy; Broadway 2016
+      <a href="#Home">Home</a>
+      <a href="#About">About</a>
+      <a href="#Work">Work</a>
+      <a href="#Team">Team</a>
+      <a href="#Contact">Contact</a>
+    </p>
+  </div>
 </body>
 </html>
