--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p>We study out projects inside and out.</p>
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
     <h3>Execute</h3>
-    <p>We put everything we have into our work</p>
+    <p>We put everything we have into our work.</p>
   </div>
   <h3 class="origin">Designed in New York</h3>
   <h3 id="Work">Portfolio</h3>
